// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ActionLink /> should render an action link 1`] = `
.c0 {
  font-weight: 600;
  font-size: .9375rem;
  text-transform: uppercase;
}

.c0,
.c0:link,
.c0:visited,
.c0:hover,
.c0:active {
  color: rgb(5,87,223);
}

<ActionLink
  href="/lol"
>
  <Anchor
    className="c0"
    href="/lol"
  >
    <a
      className="c0"
      href="/lol"
    >
      Grrr I am action man
    </a>
  </Anchor>
</ActionLink>
`;

exports[`<ActionLink /> should render an action link with a replacement anchor tag 1`] = `
.c0 {
  font-weight: 600;
  font-size: .9375rem;
  text-transform: uppercase;
}

.c0,
.c0:link,
.c0:visited,
.c0:hover,
.c0:active {
  color: rgb(5,87,223);
}

<DefaultsProvider
  value={
    Object {
      "AnchorComponent": [Function],
    }
  }
>
  <ActionLink
    href="#"
  >
    <Anchor
      className="c0"
      href="#"
    >
      <AnchorComponent
        className="c0"
        href="#"
      >
        <a
          href="/allTheFeelsUgh"
        >
          Replacement default text
        </a>
      </AnchorComponent>
    </Anchor>
  </ActionLink>
</DefaultsProvider>
`;
